@@ -16,7 +16,7 @@ namespace LightBDD.Framework.UnitTests.Expectations
                     x => x.AnyItem(item => item.Contain('a')))
                 .WithMatchingValues(new[] { "apple", "banana" })
                 .WithNotMatchingValue(null, "expected: any item contains 'a', but got: '<null>'")
-                .WithNotMatchingValue(Enumerable.Empty<string>(), "expected: any item contains 'a', but got: ''")
+                .WithNotMatchingValue(Enumerable.Empty<string>(), "expected: any item contains 'a', but got: '<empty>'")
                 .WithNotMatchingValue(new[] { "cherry", "melon" }, "expected: any item contains 'a', but got: 'cherry, melon'\n\t[0]: expected: contains 'a', but got: 'cherry'\n\t[1]: expected: contains 'a', but got: 'melon'");
 
             yield return new ExpectationScenario<string[]>(
